# HIMYC

./: .gitignore  ADAPTER_TVMAZE.md  AGENTS.md  AUDIT_2026-03.md  BASELINE_UI_PERF.md  BUG_TVMAZE_CORPUS_CRASH.md  CHANGELOG.md  CHANGELOG_DB_PHASE6.md  CHANGELOG_FINAL_COMPLET.md  CHANGELOG_PHASE6-7.md  CHECKLIST_ACCESSIBILITE_UI.md  CHECKLIST_WORKFLOW_E2E.md  CODE_REVIEW.md  DOC_BACKLOG.md  DOC_NETTOYAGE.md  DOC_PLAN_ACTION.md  DOC_PLAN_PERSONNAGES.md  DOC_PLAN_PRIORISATION_UI_REVIEW.md  DOC_PROJET_ALIGNMENT_MULTILINGUE.md  DOC_REFONTE_BACKLOG.md  DOC_REFONTE_PLAN_EXEC.md  DOC_REVIEW_CODE.md  DOC_REVIEW_DEV.md  DOC_REVIEW_PHASE2.md  DOC_REVIEW_PHASE4.md  DOC_REVIEW_PHASE5.md  DOC_REVIEW_PHASE6.md  DOC_SCENARIO_PREP_ET_PERSONNAGES.md  GUIDE_UTILISATEUR_FINAL.md  HowIMetYourCorpus.spec  LISTE_FICHIERS_MODIFIES.md  MATRICE_OWNERSHIP_UI.md  NOTES_RELEASE_UI_JALON_2026-02-15.md  PACK_RAPIDE_CONCORDANCE.md  PLAN_ACTION.md  PLAN_IMPLEMENTATION_ONGLET_PREPARER.md  PLAYBOOK_ROLLBACK_UI.md  RAPPORT_CLOTURE_LOT6_DECOUPLAGE.md  RAPPORT_VALIDATION_LOT5_ACCESSIBILITE.md  README.md  (+12 more)
doc/: README.md
docs/: nouvelle-interface-sources.md  onglets-analyse-phase7.md  optimisation-database.md  profils-normalisation-phase3.md  profils-normalisation.md  refonte-sources-equilibrees.md
example/: README.md  character_assignments.json  character_names.json  config.toml  corpus.db  create_demo_db.py  episode_preferred_profiles.json  episode_prep_status.json  jobs.json  reset_example.py  s01e01_en.srt  s01e01_fr.srt  s01e01_it.srt  series_index.json
scripts/: benchmark_ui_baseline.py  (+4 more)
(+417 files in other folders)
