[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "HowIMetYourCorpus"
version = "0.1.0"
description = "Pipeline de corpus + exploration + QA — transcriptions et sous-titres"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "CorpusStudio" }]
keywords = ["corpus", "transcription", "concordance", "KWIC", "DH"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "PySide6>=6.5",
    "httpx>=0.24",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "tomli-w>=1.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=4"]

[project.scripts]
howimetyourcorpus = "corpusstudio.app.main:main"

[project.urls]
Repository = "https://github.com/Hsbtqemy/HIMYC"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
